--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,5 @@
-# MySQL properties
-jdbc.driver=com.mysql.cj.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/db?serverTimezone=UTC
-jdbc.username=root
-jdbc.password=admin
 
-# Hibernate properties
-hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-hibernate.show_sql=true
-hibernate.format_sql=true
-hibernate.hbm2ddl.auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/db?serverTimezone=UTC
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=admin
